--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta name="viewport" content="width=dvice-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTMLの練習</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <style type="text/css">
+        /*ここにスタイル記述*/
+    </style>   
 </head>
 <body>
-    Hello World!!
+<h1>
+    将来の夢は「プログラマー」
+</h1>
+<h2>見出し２</h2>
+<h3>見出し３</h3>
+<p>段落１段落１段落１段落１</p><p>段落２段落２段落２段落２</p>
+近年小学生以下の子供を持つ多くの親が、小学校でのプログラミング・・・・
+・・・・<span>エンジニア人材サービス会社</span>な調査で。
+<ul>
+    <li>リスト１</li>
+    <li>リスト２</li>
+    <li>リスト３</li>
+    <li>リスト４</li>
+    <li>リスト５</li>
+</ul>
+<a href="https://www.google.co.jp">グーグルへのリンク</a>
+<div>ここがブロック</div>
 </body>
 </html>
