--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=dvice-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTMLの練習</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <style type="text/css">
-        /*ここにスタイル記述*/
-    </style>   
+
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    
 </head>
 <body>
 <h1>
