--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 </h1>
 <h2>見出し２</h2>
 <h3>見出し３</h3>
-<p>段落１段落１段落１段落１</p><p>段落２段落２段落２段落２</p>
+<p class="sub-title1">段落１段落１段落１段落１</p>
+<p id="sub-title2">段落２段落２段落２段落２</p>
 近年小学生以下の子供を持つ多くの親が、小学校でのプログラミング・・・・
-・・・・<span>エンジニア人材サービス会社</span>な調査で。
+・・・・<span class="company">エンジニア人材サービス会社</span>な調査で。
 <ul>
     <li>リスト１</li>
     <li>リスト２</li>
@@ -26,6 +27,8 @@
     <li>リスト５</li>
 </ul>
 <a href="https://www.google.co.jp">グーグルへのリンク</a>
-<div>ここがブロック</div>
+<div class="box1">ここがブロック</div>
+<div class="box2">ここがブロック</div>
+<div class="box3">ここがブロック</div>
 </body>
 </html>
