--- a/jspractice.html
+++ b/jspractice.html
@@ -6,6 +6,7 @@
     <title>初めてのJavaScript</title>
 </head>
 <body>
-    <script src="js/jspractice.js"></script>
+    <script src="js/jspractice.js">
+    </script>
 </body>
 </html>
