--- a/hamburger3.html
+++ b/hamburger3.html
@@ -18,7 +18,7 @@
             height: 100%;
             position: absolute;
             top: 0;
-            left: 0;
+            left: 20px;
             padding: 8px;
             z-index: 1;
             overflow: auto;
@@ -40,7 +40,7 @@
             color: #fff;
             position: absolute;
             top: 0;
-            left: -180px;
+            left: -160px;
             padding: 8px;
             width: 180px;
             min-height: 100%;
@@ -94,18 +94,18 @@
     <script>
         'use strict';
 
-        const open = document.getElementById('open');
-        const close = document.getElementById('close');
+        // const open = document.getElementById('open');
+        // const close = document.getElementById('close');
 
 
         const menu = document.getElementById('menu');
         const cover = document.getElementById('cover');
 
-        open.addEventListener('click', () => {
+        menu.addEventListener('mouseover', () => {
                 menu.className = 'menu-open';
                 cover.className = 'menu-open';
         });
-        close.addEventListener('click', () => {
+        menu.addEventListener('mouseleave', () => {
                 menu.className = '';
                 cover.className = '';
         });
