--- a/game.html
+++ b/game.html
@@ -20,10 +20,13 @@
             text-align: center;
             transition: .8s;
         }
-        .circle {
+        .hit {
             border-radius: 50%;
             background-color: pink;
             transform: rotate(360deg);
+        }
+        .lose {
+            transform: scale(0.9);
         }
     </style>
 </head>
@@ -39,7 +42,17 @@
         for (let i = 0; i < num; i++) {
             const div = document.createElement('div');
             div.classList.add('box');
-            div.textContent = i;
+            // div.textContent = i;
+
+            div.addEventListener('click', () => {
+                if (i === hit) {
+                    div.textContent = '当たり！';
+                    div.classList.add('hit');
+                } else {
+                    div.textContent = 'はずれ！';
+                    div.classList.add('lose');
+                }
+            })
 
             document.body.appendChild(div);
         }
